2010-04-30  Oliver Hader  <oliver@typo3.org>

	* Added feature: Integrate hook to handle deleting a static cached directory

2010-04-19  Oliver Hader  <oliver@typo3.org>

	* Follow-up to bug #5290: Expect the scheme name at first position and allow to modifiy with hook

2010-04-15  Oliver Hader  <oliver@typo3.org>

	* Follow-up to feature of predefining/extending values that are stored in the database
	* Added feature: Add additionalhash to implement individual and more specific database elements (utilized by hooks)
	* Fixed bug: removeExpiredPages triggeres clearing cache of a page multiple times

2010-04-14  Oliver Hader  <oliver@typo3.org>

	* Cleanup: Moved logging part of writing cache files to accordant place
	* Cleanup: Moved information that determine whether a page is cachable and added to them to hook parameters
	* Cleanup: Moved implementation to write compressed content to separate method
	* Cleanup: Extended parameters of createFile_processContent hook by URI and hostname
	* Cleanup: Renamed internal variable name
	* Added feature: Add possibility to predefine/extend values that are stored in the database

2010-02-22  Michiel Roos  <michiel@netcreators.com>

	* Updated the manual

2010-02-20  Michiel Roos  <michiel@netcreators.com>

	* Feature #3286: Enable usage of value 'reg1' from cache pages (Thanks to Alienor.net)

2010-02-19  Michiel Roos  <michiel@netcreators.com>

	* Feature #4179: Create gzipped versions of cache files (Thanks to Steffen Gebert)
	* Fixed bug #5290: nc_staticfilecache caches contents of https pages! (Thanks to Stefan Galinski)
	* Fixed bug #6525: EM refers to cc_devlog (Thanks to Steffen Gebert)

2010-02-17  Michiel Roos  <michiel@netcreators.com>

	* Fixed bug #6504: port based installations doesn't work (Thanks to Stefan Galinski)

2010-01-30  Michiel Roos  <michiel@netcreators.com>

	* Change: Show original URI on hover in infomodule

2010-01-22  Michiel Roos  <michiel@netcreators.com>
